--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://otterable.github.io/"
+baseURL = "https://otterable2.github.io/"
 paginate = 9
 
 #-------------------------------
