--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseURL = 'http://otterable2.github.io'
 languageCode = 'en-us'
 title = 'Ermine.eu - The Otter Principles'
-theme = ''
+theme = 'maverick'
 
 # Main Menu
 [menu]
